deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: miniflux
  namespace: cjc4
  labels:
    app: miniflux
spec:
  # Scaling controlled separately
  # replicas: 1
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
        - name: miniflux
          image: ghcr.io/miniflux/miniflux:2.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: web
