ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: miniflux
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`miniflux.cjc4.com`)
    kind: Rule
    services:
    - name: miniflux
      port: web
  tls:
    secretName: miniflux-cjc-com-tls
